--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,8 @@
             </plugin>
         </plugins>
     </build>
-    <build>
+    
+    </build>
     <plugins>
         <plugin>
             <groupId>org.jacoco</groupId>
@@ -95,6 +96,16 @@
             </executions>
         </plugin>
     </plugins>   
+</build>
+
+<build>
+    <plugins>
+        <plugin>
+            <groupId>org.sonarsource.scanner.maven</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>3.9.1.2184</version> <!-- Use the latest version -->
+        </plugin>
+    </plugins>
 </build>
 
 </project>
