--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
         </dependency>
     </dependencies>
 
-    <build>
+</build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -98,7 +98,7 @@
     </plugins>   
 </build>
 
-<build>
+</build>
     <plugins>
         <plugin>
             <groupId>org.sonarsource.scanner.maven</groupId>
