--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=your_project_key
-sonar.organization=your_organization_key
+sonar.projectKey=java-app
+sonar.organization=alexstoliar
 sonar.host.url=https://sonarcloud.io
 sonar.login=e7c3e44f3048ae1d7251cb9b42fad8ebec1ca481
 
